feat: complete remaining 15% — wire all dead code, add FaithStaking, wallet connect
- Wire NadFunService into AgentOrchestrator bootstrap (auto-creates $CULT token on nad.fun)
- Wire TransactionQueue into CultAgent for all on-chain writes (3x retry with backoff)
- Wire PersuasionService to call joinCult() on-chain for follower recording
- Fix prophecy resolution: real market-based validation (ETH price movement vs bullish/bearish)
- Fix confidence values: extract from prediction text instead of random
- Add FaithStaking.sol: stake MON, earn faith points, raid fee distribution
- Add WalletButton + useWallet hook: MetaMask connect with Monad testnet auto-switch
- Wire AgentDeployForm: functional deploy endpoint + rendered on dashboard
- Fix route conflict: /api/cults/leaderboard now properly before /:id
- Add NEXT_PUBLIC_API_URL + FAITH_STAKING_ADDRESS to .env.example
- Update deploy script for both CultRegistry + FaithStaking
- Add Progress.md for context continuity

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ XAI_API_KEY=your_xai_api_key_here
 # Deployed contract addresses (filled after deployment)
 CULT_REGISTRY_ADDRESS=
 CULT_TOKEN_ADDRESS=
+FAITH_STAKING_ADDRESS=
 
 # Agent API
 AGENT_API_PORT=3001
+
+# Frontend
+NEXT_PUBLIC_API_URL=http://localhost:3001
